--- a/src/app/main/card-item/card-item.component.html
+++ b/src/app/main/card-item/card-item.component.html
@@ -1,8 +1,10 @@
 <div class="card">
-    <img class="card-img-top" src="" alt="Card image cap" width="300" height="200">
+    <div class="card-img-top" src="" alt="Card image cap">
+        <img *ngFor="let img of preview" [src]="img.urls.thumb" alt="" class="card-img__prev">
+    </div>
     <div class="card-body">
         <h5 class="card-title">{{title}}</h5>
         <p class="card-text">{{text}}</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a routerLink="/photo/{{id}}" class="btn btn-primary">Go somewhere</a>
     </div>
 </div>
