--- a/src/app/main/card-item/card-item.component.scss
+++ b/src/app/main/card-item/card-item.component.scss
@@ -1,9 +1,37 @@
 @import '../../../styles.scss';
 
 .card {
-    width: 300px;
+    width: 320px;
+    overflow: hidden;
+    transition: .25s;
+
+    &:hover {
+        transition: .25s;
+        box-shadow: 0px 0px 14px 1px;
+        transform: scale(1.05);
+        z-index: 10;
+    }
 }
 
 .card-img-top {
     background-color: lightgray;
+}
+
+.card-img-top {
+    width: 320px;
+    height: 240px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card-img__prev {
+    width: 160px;
+    height: 120px;
+    object-fit: none;
+}
+
+.card-title {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
