--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="content-container" [@listAnimation]="cardList.length">
     <app-card-item class="card-item" *ngFor="let card of cardList; index as i" [title]="card.title"
-        [text]="card.user.first_name" [preview]="card.preview_photos" [id]="card.id">
+        [text]="card.user.first_name || null" [preview]="card.preview_photos" [id]="card.id"
+        [blur]="card.blur !== 'undefined' ? card.blur : false" (onMouseEvent)="setBlur($event, card)">
     </app-card-item>
 </div>
