--- a/src/app/main/main-menu/main-menu.component.html
+++ b/src/app/main/main-menu/main-menu.component.html
@@ -12,7 +12,7 @@ true}">
                         </g>
                     </svg>
                 </div>
-                <a class="nav-link ">Главная</a>
+                <a class="nav-link ">Main</a>
             </li>
             <li class="nav-item">
                 <div class="icon">
@@ -27,7 +27,7 @@ true}">
                         </g>
                     </svg>
                 </div>
-                <a class="nav-link">Недавнее</a>
+                <a class="nav-link">Recent</a>
             </li>
             <li class="nav-item" routerLink="popular" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
 true}">
@@ -43,7 +43,7 @@ true}">
                         </g>
                     </svg>
                 </div>
-                <a class="nav-link">Популярное</a>
+                <a class="nav-link">Popular</a>
             </li>
             <li class="nav-item">
                 <div class="icon">
@@ -58,7 +58,7 @@ true}">
                         </g>
                     </svg>
                 </div>
-                <a class="nav-link disabled">Избранное</a>
+                <a class="nav-link disabled">Favourites</a>
             </li>
         </ul>
     </div>
