--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,3 +89,30 @@ body {
     max-width: calc(100% - 250px);
     justify-content: space-evenly;
 }
+
+.loader {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &::after {
+        width: 50px;
+        height: 50px;
+        content: '';
+        display: block;
+        background-image: url('/assets/img/icons/loader-blue.svg');
+        animation:rotation 1.5s linear infinite;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+    }
+}
+
+@keyframes rotation {
+0% {
+    transform:rotate(0deg);
+}
+100% {
+    transform:rotate(360deg);}
+}
