--- a/src/app/main/card-item/card-item.component.html
+++ b/src/app/main/card-item/card-item.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="card-body">
         <h5 class="card-title">{{title}}</h5>
-        <p class="card-text">{{text}}</p>
-        <a routerLink="/photo/{{id}}" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text">Author: {{text}}</p>
+        <a [routerLink]="['/main', 'collection', id]" class="btn btn-primary">Go to collection</a>
     </div>
 </div>
