--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,6 +1,12 @@
 <div class="content-container" [@listAnimation]="cardList.length">
-    <app-card-item class="card-item" *ngFor="let card of cardList; index as i" [title]="card.title"
-        [text]="card.user.first_name || null" [preview]="card.preview_photos" [id]="card.id"
-        [blur]="card.blur !== 'undefined' ? card.blur : false" (onMouseEvent)="setBlur($event, card)">
-    </app-card-item>
+    <div class="loader" *ngIf="!isLoaded">
+        <h2>Loading...</h2>
+    </div>
+    <ng-container *ngIf="isLoaded">
+        <app-card-item class="card-item" *ngFor="let card of cardList; index as i" [title]="card.title"
+            [text]="card.user.first_name || null" [preview]="card.preview_photos" [id]="card.id"
+            [blur]="card.blur !== 'undefined' ? card.blur : false" (onMouseEvent)="setBlur($event, card)">
+        </app-card-item>
+    </ng-container>
+
 </div>
