--- a/src/app/main/main-header/main-header.component.scss
+++ b/src/app/main/main-header/main-header.component.scss
@@ -9,6 +9,7 @@ app-main {
         width: 100%;
         max-height: 78px;
         height: 78px;
+        z-index: 10;
     
         .logo {
             // transform: scale(.3);
@@ -94,7 +95,7 @@ app-main {
         width: 150px;
         background-color: white;
         padding: 10px;
-        top: 40px;
+        top: 58px;
     }
 
     .active {
