--- a/src/app/main/main-header/main-header.component.html
+++ b/src/app/main/main-header/main-header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" #header>
     <div class="row">
         <div class="col-9 header__item">
             <div class="logo"></div>
