--- a/src/app/main/main-header/main-header.component.scss
+++ b/src/app/main/main-header/main-header.component.scss
@@ -5,11 +5,14 @@ app-main {
     .header {
         background-color: $m-orange;
         padding: 20px 30px;
-        position: fixed;
         width: 100%;
         max-height: 78px;
         height: 78px;
         z-index: 10;
+        position: absolute;
+        transition: transform .25s;
+        transform: translateY(-70px);
+        top: 70px;
     
         .logo {
             // transform: scale(.3);
@@ -60,6 +63,20 @@ app-main {
                 color: rgba($m-light-text, .7);
             }
         }
+
+        &.fixed {
+            position: fixed;
+            transform: translateY(-70px);
+            z-index: 11;
+            top: 0;
+
+
+            &:hover {
+                transform: translate(0);
+                transition: transform .25s;
+            }
+        }
+
     }
     
     .header__item {
@@ -112,7 +129,7 @@ app-main {
         transition: .25s;
     
         &:hover {
-            opacity: .75;
+            opacity: .35;
             transition: .25s;
         }
     
@@ -120,4 +137,6 @@ app-main {
             border-bottom: 1px solid rgba($m-dark-text, .25);
         }
     }
+
+   
 }
