--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,15 +79,16 @@ body {
 }
 
 .content-container {
-    position: absolute;
-    top: 78px;
-    left: 250px;
-    z-index: -1;
-    width: 100%;
+    position: relative;
     display: flex;
     flex-wrap: wrap;
-    max-width: calc(100% - 250px);
     justify-content: space-evenly;
+    max-width: 100%;
+    margin-top: 78px;
+}
+
+.router-outlet {
+    display: inline;
 }
 
 .loader {
