--- a/src/app/main/card-item/card-item.component.html
+++ b/src/app/main/card-item/card-item.component.html
@@ -5,6 +5,7 @@
     <div class="card-body">
         <h5 class="card-title">{{title}}</h5>
         <p class="card-text">Author: {{text}}</p>
+        <p class="card-text">Total photos: {{amount}}</p>
         <a [routerLink]="['/main', 'collection', id]" class="btn btn-primary">Go to collection</a>
     </div>
 </div>
