--- a/src/app/main/modal/modal.component.html
+++ b/src/app/main/modal/modal.component.html
@@ -16,7 +16,7 @@
                     Download:
                 </div>
                 <div class="modal-dscr__text">
-                    <a [href]="modal.photo.links.download" class="modal-link"></a>
+                    <a [href]="modal.photo.links.download" target="_blanc" class="modal-link"></a>
                 </div>
             </div>
             <div class="modal-dscr__item" (click)="addFavorites">
