--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,7 +82,7 @@ body {
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     max-width: 100%;
     margin-top: 78px;
 }
