--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -5,7 +5,8 @@
     <ng-container *ngIf="isLoaded">
         <app-card-item class="card-item" *ngFor="let card of cardList; index as i" [title]="card.title"
             [text]="card.user.first_name || null" [preview]="card.preview_photos" [id]="card.id"
-            [blur]="card.blur !== 'undefined' ? card.blur : false" (onMouseEvent)="setBlur($event, card)">
+            [blur]="card.blur !== 'undefined' ? card.blur : false" [amount]="card.total_photos"
+            (onMouseEvent)="setBlur($event, card)">
         </app-card-item>
     </ng-container>
 
