анимация появления карточек

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,6 +85,7 @@ body {
     justify-content: flex-start;
     max-width: 100%;
     margin-top: 78px;
+    perspective: 900px;
 }
 
 .router-outlet {
@@ -97,6 +98,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    right: calc(-50vw + 140px);
+    top: 100px;
     &::after {
         width: 50px;
         height: 50px;
