--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,13 +1,19 @@
 <div class="content-container" [@listAnimation]="cardList.length">
-    <div class="loader" *ngIf="!isLoaded">
-        <h2>Loading...</h2>
+    <div class="row mx-auto">
+        <ng-container *ngIf="isLoaded">
+            <app-card-item class="card-item" *ngFor="let card of cardList; index as i; last as isLast"
+                [title]="card.title" [text]="card.user.first_name || null" [preview]="card.preview_photos"
+                [id]="card.id" [blur]="card.blur !== 'undefined' ? card.blur : false" [amount]="card.total_photos"
+                (onMouseEvent)="setBlur($event, card)" @cardAnimation>
+            </app-card-item>
+        </ng-container>
+        <div class="loader" *ngIf="!isLoaded">
+            <h2>Loading...</h2>
+        </div>
     </div>
-    <ng-container *ngIf="isLoaded">
-        <app-card-item class="card-item" *ngFor="let card of cardList; index as i" [title]="card.title"
-            [text]="card.user.first_name || null" [preview]="card.preview_photos" [id]="card.id"
-            [blur]="card.blur !== 'undefined' ? card.blur : false" [amount]="card.total_photos"
-            (onMouseEvent)="setBlur($event, card)">
-        </app-card-item>
-    </ng-container>
+
+    <div class="row mx-auto">
+        <app-pagination *ngIf="isLoaded"></app-pagination>
+    </div>
 
 </div>
