--- a/src/app/main/collection/collection.component.html
+++ b/src/app/main/collection/collection.component.html
@@ -1,10 +1,13 @@
 <div class="content-container" [@listAnimation]="collection.length">
-    <ng-container *ngIf="collection.length">
-        <app-photo-item class="card-item" *ngFor="let photo of collection; index as i; last as isLast" [photo]="photo"
-            (onMouseEvent)="setBlur($event, photo)" [blur]="photo.blur !== 'undefined' ? photo.blur : false"
-            [lastItem]="isLast" (showCurrentPhoto)="showModal($event)" (lastElemEvent)="setObsrve($event)">
-        </app-photo-item>
-    </ng-container>
+    <div class="row mx-auto">
+        <ng-container *ngIf="collection.length">
+            <app-photo-item class="card-item" *ngFor="let photo of collection; index as i; last as isLast"
+                [photo]="photo" (onMouseEvent)="setBlur($event, photo)"
+                [blur]="photo.blur !== 'undefined' ? photo.blur : false" [lastItem]="isLast"
+                (showCurrentPhoto)="showModal($event)" (lastElemEvent)="setObsrve($event)">
+            </app-photo-item>
+        </ng-container>
+    </div>
     <div class="loader" *ngIf="!isLoaded">
         <h2>Loading...</h2>
     </div>
