--- a/src/app/auth/registration/registration.component.scss
+++ b/src/app/auth/registration/registration.component.scss
@@ -8,7 +8,12 @@
     margin-bottom: 20px;
     padding: 20px;
     border-radius: 2px;
-    box-shadow: 3px 3px 6px 2px rgba(0, 0, 0, .2);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.11), 
+              0 2px 2px rgba(0,0,0,0.11), 
+              0 4px 4px rgba(0,0,0,0.11), 
+              0 8px 8px rgba(0,0,0,0.11), 
+              0 16px 16px rgba(0,0,0,0.11), 
+              0 32px 32px rgba(0,0,0,0.11);
 }
 
 h2 {
