--- a/src/app/main/card-item/card-item.component.scss
+++ b/src/app/main/card-item/card-item.component.scss
@@ -5,16 +5,23 @@
     overflow: hidden;
     transition: .25s;
 
-    &.blur {
-        opacity: .65;
-        transition: .25s;
-        transform: scale(1);
-        filter: blur(1px)
+    &:not(:hover) {
+        .blur & {
+            opacity: .65;
+            transition: .25s;
+            transform: scale(1);
+            filter: blur(1px)
+        }
     }
 
     &:hover {
         transition: .25s;
-        box-shadow: 0px 1px 9px 3px rgba(0,0,0,.3);
+        box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
+                0 2px 4px rgba(0,0,0,0.07), 
+                0 4px 8px rgba(0,0,0,0.07), 
+                0 8px 16px rgba(0,0,0,0.07),
+                0 16px 32px rgba(0,0,0,0.07), 
+                0 32px 64px rgba(0,0,0,0.07);
         transform: scale(1.04);
         z-index: 10;
     }
